[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Puerta.gd" type="Script" id=1]

[node name="Puerta" type="Node2D" groups=["puerta"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ray" type="RayCast2D" parent="."]
exclude_parent = false
cast_to = Vector2( 0, 0 )
collision_mask = 296
collide_with_areas = true
collide_with_bodies = false
__meta__ = {
"_edit_lock_": true
}

[node name="Clk" type="Timer" parent="."]
one_shot = true

[node name="Verifica" type="Timer" parent="."]
one_shot = true

[node name="Rombo" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Total" type="Label" parent="."]
margin_left = -51.0
margin_top = -65.0
margin_right = -2.0
margin_bottom = -43.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="tree_exiting" from="." to="." method="_on_Puerta_tree_exiting"]
[connection signal="timeout" from="Clk" to="." method="_on_Clk_timeout"]
[connection signal="timeout" from="Verifica" to="." method="_on_Verifica_timeout"]
[connection signal="timeout" from="Rombo" to="." method="_on_Rombo_timeout"]
